# HES-2-Praktikum

./: .gitignore  README.md  brainstorming.md  pyproject.toml
data/: Reference_Picarro_G2401.parquet  Sensor_GMP343_Calibration.parquet
data/1_Dilution_Correction/: Reference_Picarro_G2401.parquet
data/2_Aggregation_And_Performance_Metrics/: Sensor_6_GMP343_Measurement.parquet
data/2_Calibration_Correction/: Sensor_GMP343_Measurement.parquet
data/3_Aggregation_And_Performance_Metrics/: Reference_Picarro_G2401.parquet  Sensor_3_GMP343_Measurement.parquet  Sensor_6_GMP343_Measurement.parquet
data/3_Sensor_Sensitivity/: 2024_Sensor_GMP343_Measurement.parquet
data/4_Dilution_Correction/: Sensor_GMP343_Measurement.parquet
data/4_Sensor_Sensitivity/: Sensor_GMP343_Measurement.parquet
notebooks/: 1_Calibration_Correction.ipynb  1_Dilution_Correction.ipynb  2_Aggregation_And_Performance_Metrics.ipynb  2_Calibration_Correction.ipynb  3_Aggregation_And_Performance_Metrics.ipynb  3_Sensor_Sensitivity.ipynb  4_Dilution_Correction.ipynb  4_Sensor_Sensitivity.ipynb  helper_df_extract.ipynb
utils/: plot_dataframes.py  plot_sensitivities.py  plot_series.py  process_bottles.py
