[project]
name = "hes-2-praktikum"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Aigner",email = "patrick.aigner@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.26.0,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "hampel (>=1.0.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
