[project]
name = "hes-2-praktikum"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Aigner",email = "patrick.aigner@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.26.0,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
